# mori

./: .gitignore  CMakeLists.txt  setup.py
examples/: CMakeLists.txt
examples/ops/dispatch_combine/: bench.cpp  bench_triton_kernels.py  test_dispatch_combine.py  test_dispatch_combine_internode.py  test_dispatch_combine_internode_transform.py  triton_kernels.py
include/mori/ops/: ops.hpp
include/mori/ops/dispatch_combine/: dispatch_combine.hpp  layout_transform_kernels.hpp
include/mori/ops/dispatch_combine_deepep/: dispatch_combine_deepep.hpp
python/mori/: __init__.py
python/mori/ops/: Buffer.py  __init__.py  bench_buffer.py  dispatch_combine.py  dispatch_combine_deepep.py  gpu_kernels.py  triton_kernels.py
src/ops/: CMakeLists.txt
src/ops/dispatch_combine/: dispatch_combine.cpp  internode_v1.cpp  internode_v1.hpp  intranode.hpp  layout_transform_kernels.cpp  ll_fused_kernels.cpp
src/ops/dispatch_combine_deepep/: dispatch_combine_deepep.cpp  internode_deepep_direct.hpp  intranode_deepep_direct.hpp
src/pybind/: CMakeLists.txt  mori.cpp  torch_utils.hpp
tests/python/: utils.py
tests/python/ops/: test_buffer.py  test_dispatch_combine_deepep.py  test_dispatch_combine_deepep_ll.py
